[FIXED ISSUE] adjust remove all plugins button on scrollbar http://mantis.melistechnology.fr/view.php?id=3805

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3746,7 +3746,7 @@ div#modal-user-management div.widget {
     position: fixed;
     top: 47px;
     right: 0px;
-    width: 180px;
+    width: 214px;
     height: calc(100% - 47px);
     font-family: 'Lato', sans-serif;
     font-weight: normal;
@@ -3755,10 +3755,10 @@ div#modal-user-management div.widget {
     border-bottom: 4px solid #e61c23;
     border-left: 4px solid #e61c23;
     background: #373737;
-    transform: translate3d(180px, 0, 0);
-    -webkit-transform: translate3d(180px, 0, 0);
-    -moz-transform: translate3d(180px, 0, 0);
-    -ms-transform: translate3d(180px, 0, 0);
+    transform: translate3d(214px, 0, 0);
+    -webkit-transform: translate3d(214px, 0, 0);
+    -moz-transform: translate3d(214px, 0, 0);
+    -ms-transform: translate3d(214px, 0, 0);
     transition: transform 0.4s, height 0.4s;
     -webkit-transition: transform 0.4s, height 0.4s;
     -moz-transition: transform 0.4s, height 0.4s;
@@ -3778,6 +3778,7 @@ div#modal-user-management div.widget {
 .melis-core-dashboard-dnd-fix-menu {
     height: 100%;
     overflow-y: auto;
+    overflow-x: hidden;
     /* overflow: visible; */
 }
 
@@ -4165,14 +4166,14 @@ div#modal-user-management div.widget {
 
 /* changes the width on smaller widths */
 @media (min-width: 320px) and (max-width: 640px) {
-    /*.melis-core-dashboard-dnd-box {
-        width: 140px;
+    .melis-core-dashboard-dnd-box {
+        width: 180px;
         
-        transform: translate3d(140px, 0, 0);
-        -webkit-transform: translate3d(140px, 0, 0);
-        -moz-transform: translate3d(140px, 0, 0);
-        -ms-transform: translate3d(140px, 0, 0);
-    }*/
+        transform: translate3d(180px, 0, 0);
+        -webkit-transform: translate3d(180px, 0, 0);
+        -moz-transform: translate3d(180px, 0, 0);
+        -ms-transform: translate3d(180px, 0, 0);
+    }
     .melis-core-dashboard-ps-box .melis-core-dashboard-filter-btn .fa,
     .melis-core-dashboard-category-btn .fa {
         right: 6px;
